@@ -74,6 +74,15 @@ Trying to run second copy of I<omnipitr-archive> will result in an error.
 
 Log verbosely what is happening.
 
+=item --not-nice (-nn)
+
+Do not use nice for compressions.
+
+=item --nice-path (-np)
+
+Full path to nice program - in case you can't set proper PATH environment
+variable.
+
 =item --gzip-path (-gp)
 
 Full path to gzip program - in case you can't set proper PATH environment
