@@ -69,6 +69,10 @@ the same as condigured removal-pause-trigger for L<omnipitr-restore>.
 
 Log verbosely what is happening.
 
+=item --not-nice (-nn)
+
+Do not use nice for compressions.
+
 =item --gzip-path (-gp)
 
 Full path to gzip program - in case you can't set proper PATH environment
